2009-03-17  daniel g. siegel <dgsiegel@gmail.com>

	* projects.gnome.org/cheese/download.html,
	  projects.gnome.org/cheese/index.html,
	  projects.gnome.org/cheese/tour.html: 
	  populate the cheese 2.26.0 release

2009-03-15  Frederic Peters  <fpeters@0d.be>

	* www.gnome.org/htaccess: swapped more RedirectMatch lines so
	2.1[02468] are also properly redirected to the release notes.

2009-03-15  Frederic Peters  <fpeters@0d.be>

	* www.gnome.org/htaccess: swapped RedirectMatch lines that caused the
	2.24 start page to redirect to the 2.2 release notes.

2009-03-10  daniel g. siegel <dgsiegel@gmail.com>

	* projects.gnome.org/cheese/download.html,
	  projects.gnome.org/cheese/index.html: 
	  update the cheese releases

2009-03-08  Marco Barisione  <marco@barisione.org>

	Add two missing images to the Makefile for the libchamplain website.

	* projects.gnome.org/libchamplain/Makefile.am:

2009-03-08  Marco Barisione  <marco@barisione.org>

	Add the libchamplain website.

	* projects.gnome.org/libchamplain/*: Added.
	* configure.in:
	* projects.gnome.org/Makefile.am:
	* projects.gnome.org/index.html:

2009-03-01  Dodji Seketeli  <dodji@redhat.com>

	* projects.gnome.org/nemiver/index.html: Update for 0.6.5 release.

2009-02-27  Dodji Seketeli  <dodji@redhat.com>

	* projects.gnome.org/nemiver/index.html: Update scm info.

2009-02-24  Dodji Seketeli  <dodji@redhat.com>

	* projects.gnome.org/nemiver/index.html: The mailing list moved to
	gnome.org. Update the website accordingly.

2009-02-16  Claudio Saavedra  <csaavedra@igalia.com>

	* projects.gnome.org/gyrus/about.html:
	* projects.gnome.org/gyrus/developers.html:
	* projects.gnome.org/gyrus/downloads.html:
	* projects.gnome.org/gyrus/index.html:
	* projects.gnome.org/gyrus/screenshots.html:

	Update for gyrus 0.3.8

2009-02-05  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/friends/step2.wml: add links to each hacker listed in
	the Adopt a Hacker donation form.

2009-01-27  Lucas Rocha  <lucasr@gnome.org>
