@@ -101,7 +101,7 @@ cat <<FOOT
   </div> <!-- end of div#content -->
 
   <div id="footer">
-    Copyright &copy; 2005-2008 <a href="http://www.gnome.org/">The GNOME Project</a>.<br>
+    Copyright &copy; 2005-2009 <a href="http://www.gnome.org/">The GNOME Project</a>.<br>
     <a href="http://validator.w3.org/check/referer">Optimised</a> for <a href="http://www.w3.org/">standards</a>. Hosted by <a href="http://www.redhat.com/">Red Hat</a>.
   </div>
 
