@@ -1,9 +1,9 @@
 Options +MultiViews +SymLinksIfOwnerMatch
 
 # Temporary utility redirects which should always exist
-Redirect /start/stable                   http://library.gnome.org/misc/release-notes/2.24
+Redirect /start/stable                   http://library.gnome.org/misc/release-notes/2.26
 Redirect /start/unstable/schedule.ics    http://www.gnome.org/start/schedule-unstable.ics
-Redirect /start/unstable                 http://live.gnome.org/TwoPointTwentyfive
+Redirect /start/unstable                 http://live.gnome.org/TwoPointTwentyseven
 # For old release notes (2.12 and 2.14 are handled separately because they have a press release):
 RedirectMatch ^/start/(2\.12])/press_release   /press/releases/2.12
 RedirectMatch ^/start/(2\.14])/press_release   /press/releases/2.14
