@@ -49,6 +49,7 @@ page_DATA = \
 	gnome-equation.png \
 	outreach-a11y.png \
 	two-twenty-four.png \
-	new-friends-of-gnome.png
+	new-friends-of-gnome.png \
+	two-twenty-six.png
 
 include $(top_srcdir)/rules.common
