@@ -9,7 +9,7 @@
 <h1>GNOME: The Free Software Desktop Project</h1>
 
 <div id="top">
-<a href="http://www.gnome.org/friends/"><img src="img/flash/new-friends-of-gnome.png" title="Friends of GNOME" alt="Friends of GNOME Banner" width="603" height="166"></a>
+<a href="http://library.gnome.org/misc/release-notes/2.26/"><img src="img/flash/two-twenty-six.png" title="GNOME 2.26" alt="GNOME 2.26 Banner" width="603" height="166"></a>
 </div><!-- top -->
 
 
@@ -20,14 +20,14 @@
 <div id="bottomLeftLeft">
 <h2>Latest News</h2>
 
+<h3><a href="http://library.gnome.org/misc/release-notes/2.26/">GNOME 2.26 Released!</a></h3>
+<p>The GNOME project is proud to release this new version of the GNOME desktop environment and developer platform. Among the hundreds of bug fixes and user-requested improvements, GNOME 2.26 has several highly visible changes: the inclusion of a new disc burning application, simpler file sharing and a generally smoother user experience. Learn more about GNOME 2.26 through the detailed <a href="http://library.gnome.org/misc/release-notes/2.26/">release notes</a>.</p>
+
 <h3><a href="http://www.gnome.org/friends">New Friends of GNOME program launched!</a></h3>
 <p>A big thanks to all our supporters for their love over 2008 - here's to GNOME's success creating free and open source software for all! Come support free software in 2009 with our new $10/month program ... and a postcard from your favorite hacker!</p>
 
 <h3><a href="http://www.navegantesdehoy.es/">GNOME Hispano wins Best Initiative in Free Software Award</a></h3>
 <p>The GNOME Hispano group has been nominated in the Best Initiative in Free Software category of the Navegantes de Hoy awards, which are delivered by a newspaper in Extremadura. And GNOME Hispano won! This acknowledges the hard work done by the group in various areas like events, translations, and participation to the free software community.</p>
-
-<h3><a href="http://www.gnome.org/press/releases/2008-12-sugarlabs.html">Sugar Labs, the nonprofit behind the OLPC software, is joining the GNOME Foundation</a></h3>
-<p>Sugar Labs, a member of the Software Freedom Conservancy, is joining the GNOME Foundation as part of the GNOME Advisory Board. Sugar Labs creates software for young children used on platforms like the One Laptop Per Child's XO. Sugar is based on the GNOME platform and relies on technologies like GTK+ and Telepathy.</p>
 
 </div>
 
