@@ -34,13 +34,13 @@ use our software.</p>
 <p>GNOME releases a new stable version every six months, usually in
 March and September. If you want thoroughly tested software and a
 stable developer platform, the stable version is what you want. The
-current stable version of GNOME is GNOME 2.24, released in September
-2008.<p>
+current stable version of GNOME is GNOME 2.26, released in March
+2009.<p>
 
 <p>The latest stable version of GNOME is generally included after only a few days in the development version of most distributions, like <a href="http://fedoraproject.org/">Fedora</a>, <a href="http://www.foresightlinux.org/">Foresight Linux</a>, <a href="http://www.gentoo.org/">Gentoo</a>, <a href="http://www.mandriva.com/">Mandriva</a>, <a href="http://www.opensuse.org/">openSUSE</a> and <a href="http://www.ubuntu.com/">Ubuntu</a>, but also <a href="http://www.freebsd.org/">FreeBSD</a> or <a href="http://opensolaris.org/">OpenSolaris</a>. Therefore, after a few weeks, you can get the latest stable version of GNOME by simply installing the latest version of your favourite distribution.</p>
 
-<p>To get more information about what is new in GNOME 2.24, and how to get
-it, read the <a href="/start/stable/">GNOME 2.24</a> start page.</p>
+<p>To get more information about what is new in GNOME 2.26, and how to get
+it, read the <a href="/start/stable/">GNOME 2.26</a> start page.</p>
 
 <h3>Development GNOME</h3>
 
@@ -49,12 +49,11 @@ development or 'unstable' branch of GNOME, where lots of fun happens,
 but also occasionally scary and unstable things happen.  If you are
 interested in testing the newest features, or want to develop GNOME
 software, this is the release for you. The current development branch
-is GNOME 2.25, due for release in March 2009.</p>
+is GNOME 2.27, due for release in September 2009.</p>
 
-<p>To get more information about GNOME 2.25, check out the <a
-href="/start/unstable/">GNOME 2.25
-Release Planning page</a>, which includes calendars, some feature
-notes, and other information.</p>
+<p>To get more information about GNOME 2.27, check out the <a
+href="/start/unstable/">GNOME 2.27 Release Planning page</a>, which includes
+calendars, some feature notes, and other information.</p>
 
 <p>If you've read up, and are ready to take the plunge, see our page
 on <a href="http://live.gnome.org/GetUnstable">building and installing
