@@ -1,3 +1,13 @@
+2009-03-18  Vincent Untz  <vuntz@gnome.org>
+
+	* include/evilsedhack:
+	* projects.gnome.org/index.html: update copyright years
+	* www.gnome.org/htaccess:
+	* www.gnome.org/img/flash/Makefile.am:
+	* www.gnome.org/img/flash/two-twenty-six.png:
+	* www.gnome.org/index.wml:
+	* www.gnome.org/start/index.wml: GNOME 2.26.0!
+
 2009-03-17  daniel g. siegel <dgsiegel@gmail.com>
 
 	* projects.gnome.org/cheese/download.html,
